[gd_scene load_steps=5 format=2]

[ext_resource path="res://car/car_red_1.png" type="Texture" id=1]
[ext_resource path="res://car/car.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 35.042, 66.0011 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 62.584
height = 60.7206

[node name="Car" type="RigidBody2D"]
position = Vector2( -0.598724, 0 )
mass = 10.0
gravity_scale = 0.0
linear_damp = 0.7
script = ExtResource( 2 )

[node name="body" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 6.10352e-05, -0.598694 )
shape = SubResource( 1 )

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 2 )

[node name="DoorPos" type="Node2D" parent="."]
position = Vector2( 63.0249, -34.6637 )
scale = Vector2( -398.259, -149.702 )
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
